fixed spacing on final row

--- a/index.css
+++ b/index.css
@@ -47,7 +47,9 @@
 
 .projects {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+    margin: auto;
 }
 
 .link-image:hover {
@@ -57,7 +59,6 @@
 .project-container {
     padding: 20px;
     display: inline-block;
-    margin: auto;
 }
 
 .project {
